UC12: Safety Compliance Check for Goods Bogies